# prezi_download

./: .gitignore  README.md  cli.py  debug_youtube.py  main.py  mybook.ipynb  prezi_download.bat  pyproject.toml  requirements.txt  test_utilities.py  test_utilities_fixed.py  zz-01.ipynb
prezi_output/: youtube_links_20250602_201515.txt
utils/: __init__.py  config.py  prezi_scraper.py  screenshot_capture.py  youtube_extractor.py
