[project]
name = "prezi-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "selenium>=4.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pillow>=9.0.0",
]
